to fix scrollbar shift

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,12 +13,12 @@
 
 /////// STYLES ////////
 // it is used for avoiding the page shift on removing the scrollbar at overflow: hidden;
-.total-layer {
+/*.total-layer {
   width: 100vw;
   padding-right: 17px;
   overflow: hidden;
   box-sizing: content-box;
-}
+}*/
 
 .total-wrapper {
   box-sizing: border-box;
